--- a/HyprV/hypr/hyprland.conf
+++ b/HyprV/hypr/hyprland.conf
@@ -26,7 +26,7 @@ exec = ~/.config/HyprV/hyprv_util setbg
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = us
+    kb_layout = fr
     kb_variant =
     kb_model =
     kb_options =
